--- a/.github/workflows/assign_reviewers.yml
+++ b/.github/workflows/assign_reviewers.yml
@@ -3,7 +3,7 @@ name: Auto assign reviewers
 on:
   pull_request:
     branches:
-      - main 
+      - main
 
 jobs:
   auto-assign-reviewers:
@@ -12,5 +12,7 @@ jobs:
       - name: Auto-assign reviewers
         uses: kentaro-m/auto-assign-action@v2.0.0
         with:
-          configuration-path: '.github/auto_assign.yml'
+          addReviewers: true
+          reviewers: 'mackenziesnyder,adeleyounis,alexisbader,gavin2178'
+          numberOfReviewers: 4
 
